# tgcmlinux

./: .gitignore  Makefile.am  README  README.md  authors  autogen.sh  betacleaner  configure.ac  gnome-autogen.sh  recolectorScriptsBuilder.sh  rpmgenerator.py  update_themes_makefile.sh
data/autostart/: Makefile.am  tgcm-ar.desktop  tgcm-cl.desktop  tgcm-co.desktop  tgcm-cr.desktop  tgcm-cz.desktop  tgcm-de.desktop  tgcm-ec.desktop  tgcm-es.desktop  tgcm-gt.desktop  tgcm-mx.desktop  tgcm-ni.desktop  tgcm-pa.desktop  tgcm-pe.desktop  tgcm-sv.desktop  tgcm-uk.desktop  tgcm-uy.desktop  tgcm-ve.desktop
data/icon-theme/22x22/: Makefile.am
data/icon-theme/48x48/: Makefile.am
data/icons/theme/default/dock/TrafficZone/: Makefile.am
data/mime-stuff/: Makefile.am  tgcm  tgcm.applications  tgcm.keys  tgcm.mime  tgcm.xml
data/mime-stuff/ar/: Makefile.am
data/mime-stuff/cl/: Makefile.am
data/mime-stuff/co/: Makefile.am
data/mime-stuff/cr/: Makefile.am
data/mime-stuff/cz/: Makefile.am
data/mime-stuff/de/: Makefile.am
data/mime-stuff/ec/: Makefile.am
data/mime-stuff/es/: Makefile.am
data/mime-stuff/gt/: Makefile.am
data/mime-stuff/mx/: Makefile.am
data/mime-stuff/ni/: Makefile.am
data/mime-stuff/pa/: Makefile.am
data/mime-stuff/pe/: Makefile.am
data/mime-stuff/sv/: Makefile.am
data/mime-stuff/uk/: Makefile.am
data/mime-stuff/uy/: Makefile.am
data/mime-stuff/ve/: Makefile.am
data/regional-info/: Makefile.am
data/regional-info/ar/: regional-info.xml
data/regional-info/cl/: regional-info.xml
data/regional-info/co/: regional-info.xml
data/regional-info/cr/: regional-info.xml
data/regional-info/cz/: regional-info.xml
data/regional-info/de/: regional-info.xml  regional-info_eurovia.xml
data/regional-info/ec/: regional-info.xml
data/regional-info/es/: hotspot-list.xml  regional-info.xml
data/regional-info/gt/: regional-info.xml
data/regional-info/mx/: regional-info.xml
data/regional-info/ni/: regional-info.xml
data/regional-info/pa/: regional-info.xml
data/regional-info/pe/: regional-info.xml
data/regional-info/sv/: regional-info.xml
data/regional-info/uk/: hotspot-list.xml  regional-info.xml
data/regional-info/uy/: regional-info.xml
data/regional-info/ve/: regional-info.xml
src/tgcm/contrib/freedesktopnet/: Makefile.am  __init__.py  make_make.sh
src/tgcm/contrib/freedesktopnet/dbusclient/: __init__.py  func.py  monitor.py
src/tgcm/contrib/freedesktopnet/modemmanager/: modemmanager.py
src/tgcm/contrib/freedesktopnet/networkmanager/: accesspoint.py  activeconnection.py  device.py  monitor.py  networkmanager.py  util.py
src/tgcm/contrib/freedesktopnet/networkmanager/applet/: __init__.py  connection.py  settings.py
src/tgcm/contrib/mobile-manager2/data/dbus/: Makefile.am
src/tgcm/contrib/mobile-manager2/src/mobilemanager/: DeviceLogger.py  DeviceManager.py  DevicePort.py  DeviceTable.py  Logging.py  Makefile.am  Mixin.py  ModemManager.py  Singleton.py
src/tgcm/core/: Actions.py  Addressbook.py  Advertising.py  Autostart.py  Bookmarks.py  Config.py  ConnectionLogger.py  ConnectionManager.py  ConnectionSettingsManager.py  Connections.py  DBusInterface.py  Debug.py  Decorators.py  Device.py  DeviceDecorators.py  DeviceDialer.py  DeviceExceptions.py  DeviceManager.py  DocManager.py  DownloadHelper.py  Exporter.py  FreeDesktop.py  GSettings.py  HotSpotsService.py  Importer.py  MainModem.py  MainWifi.py  Makefile.am  Messaging.py  MobileManagerClient.py  NetworkManagerDbus.py  NewsService.py  Notify.py  PPPVariables.py  SMSStorage.py  Signals.py  Singleton.py  Theme.py  TrafficManager.py  TrafficStorage.py  (+3 more)
src/tgcm/ui/MSD/: MSDAction.py  MSDAction_frame.ui  MSDActionsManager.py  MSDConnectionsManager.py  MSDConnectionsManager_dialog.ui  MSDImporter.py  MSDImporter_dialog.ui  MSDMessages.py  MSDNmPinDialogCloseHelper.py  MSDProgressWindow.py  MSDProgressWindow_dialog.ui  MSDSecurityManager.py  MSDSecurityManager_dialog.ui  MSDUtils.py  Makefile.am  __init__.py
src/tgcm/ui/widgets/dock/: Makefile.am  __init__.py
src/tgcm/ui/widgets/dock/ConnectionZone/: AvailableNetworksDialog.py  ConnectionZone.py  Makefile.am  __init__.py
src/tgcm/ui/widgets/dock/Menubar/: Makefile.am  (+1 more)
src/tgcm/ui/widgets/themedwidgets/: LayoutLoader.py  Makefile.am  ThemedAnimate.py  ThemedBackground.py  ThemedBackgroundWithAds.py  ThemedBanner.py  ThemedBitmap.py  ThemedButton.py  ThemedLabel.py  ThemedProgress.py  ThemedServiceButton.py  ThemedWidget.py  ThemedWidgetEx.py  __init__.py
src/tgcm/ui/windows/: Makefile.am  __init__.py
src/tgcm/ui/windows/AddressBook/: AddressBook.py  AddressBook_editor.ui  AddressBook_import.ui  AddressBook_main.ui  AddressBook_search_contact.ui  Makefile.am  __init__.py
src/tgcm/ui/windows/CarrierDialog/: CarrierDialog.py  CarrierDialog.ui  Makefile.am  __init__.py
src/tgcm/ui/windows/CheckboxDialog/: CheckboxDialog.py  Makefile.am  __init__.py
src/tgcm/ui/windows/ConnectionDialog/: ConnectionDialog.py  ConnectionDialog_editor.ui  ConnectionDialog_proxy.ui  Makefile.am  __init__.py
src/tgcm/ui/windows/Dialog/: Dialog.py  Dialog.ui  Makefile.am  __init__.py
src/tgcm/ui/windows/Generic/: Makefile.am  Windows.py  Windows.ui  __init__.py
src/tgcm/ui/windows/HelpDialog/: HelpDialog.py  HelpDialog.ui  Makefile.am  __init__.py
src/tgcm/ui/windows/NewsServiceDialog/: Makefile.am  NewsServiceDialog.py  NewsServiceDialog.ui  __init__.py
src/tgcm/ui/windows/PinDialog/: AskPinDialog.py  AskPinDialog.ui  ChangePinDialog.py  ChangePinDialog.ui  Makefile.am  ManagePinDialog.py  ManagePinDialog.ui  __init__.py
src/tgcm/ui/windows/PukDialog/: Makefile.am  PukDialog.py  PukDialog.ui  __init__.py
src/tgcm/ui/windows/RecargaSaldo/: Makefile.am  RecargaSaldo.py  RecargaSaldo_main.ui  RecargaSaldo_phonebox.ui  __init__.py
src/tgcm/ui/windows/Settings/: Makefile.am  Settings.py  __init__.py
src/tgcm/ui/windows/Traffic/: BillingDayChangeDialog.ui  Makefile.am  Traffic.py  Traffic.ui  __init__.py
src/tgcm/ui/windows/UnlockDeviceDialog/: Makefile.am  UnlockDeviceDialog.py  UnlockDeviceDialog.ui  __init__.py
(+549 files in other folders)
