autostartdir = $(sysconfdir)/xdg/autostart
autostart_DATA = 	tgcm-ar.desktop \
			tgcm-cl.desktop \
			tgcm-co.desktop \
			tgcm-cz.desktop \
			tgcm-de.desktop \
			tgcm-ec.desktop \
			tgcm-es.desktop \
			tgcm-gt.desktop \
			tgcm-mx.desktop \
			tgcm-ni.desktop \
			tgcm-pa.desktop \
			tgcm-pe.desktop \
			tgcm-sv.desktop \
			tgcm-uk.desktop \
			tgcm-uy.desktop \
			tgcm-ve.desktop \
			tgcm-cr.desktop 
			
EXTRA_DIST = $(autostart_DATA)
