SUBDIRS =  ar de mx ec pa uy ni ve pe es uk gt sv co cz cl cr

#applicationsdir = $(datadir)/application-registry
#applications_DATA = tgcm.applications

#mimeinfodir = $(datadir)/mime-info
#mimeinfo_DATA = tgcm.mime

mimepackagedir = $(datadir)/mime/packages
mimepackage_DATA = tgcm.xml

hicolornotifydir=

EXTRA_DIST=$(applications_DATA) $(mimeinfo_DATA) $(mimepackage_DATA) 
