arregionalinfodir = $(datadir)/tgcm/regional-info/ar
arregionalinfo_DATA =         ar/regional-info.xml ar/hotspot-list.xml

deregionalinfodir = $(datadir)/tgcm/regional-info/de
deregionalinfo_DATA =         de/regional-info.xml

mxregionalinfodir = $(datadir)/tgcm/regional-info/mx
mxregionalinfo_DATA =         mx/regional-info.xml mx/hotspot-list.xml

ecregionalinfodir = $(datadir)/tgcm/regional-info/ec
ecregionalinfo_DATA =         ec/regional-info.xml ec/hotspot-list.xml

paregionalinfodir = $(datadir)/tgcm/regional-info/pa
paregionalinfo_DATA =         pa/regional-info.xml pa/hotspot-list.xml

uyregionalinfodir = $(datadir)/tgcm/regional-info/uy
uyregionalinfo_DATA =         uy/regional-info.xml uy/hotspot-list.xml

niregionalinfodir = $(datadir)/tgcm/regional-info/ni
niregionalinfo_DATA =         ni/regional-info.xml ni/hotspot-list.xml

veregionalinfodir = $(datadir)/tgcm/regional-info/ve
veregionalinfo_DATA =         ve/regional-info.xml ve/hotspot-list.xml

peregionalinfodir = $(datadir)/tgcm/regional-info/pe
peregionalinfo_DATA =         pe/regional-info.xml pe/hotspot-list.xml

esregionalinfodir = $(datadir)/tgcm/regional-info/es
esregionalinfo_DATA =         es/regional-info.xml es/hotspot-list.xml

ukregionalinfodir = $(datadir)/tgcm/regional-info/uk
ukregionalinfo_DATA =         uk/regional-info.xml uk/hotspot-list.xml

gtregionalinfodir = $(datadir)/tgcm/regional-info/gt
gtregionalinfo_DATA =         gt/regional-info.xml gt/hotspot-list.xml

svregionalinfodir = $(datadir)/tgcm/regional-info/sv
svregionalinfo_DATA =         sv/regional-info.xml sv/hotspot-list.xml

coregionalinfodir = $(datadir)/tgcm/regional-info/co
coregionalinfo_DATA =         co/regional-info.xml co/hotspot-list.xml

czregionalinfodir = $(datadir)/tgcm/regional-info/cz
czregionalinfo_DATA =         cz/regional-info.xml

clregionalinfodir = $(datadir)/tgcm/regional-info/cl
clregionalinfo_DATA =         cl/regional-info.xml cl/hotspot-list.xml

crregionalinfodir = $(datadir)/tgcm/regional-info/cr
crregionalinfo_DATA =         cr/regional-info.xml cr/hotspot-list.xml

EXTRA_DIST= 	ar/regional-info.xml 		\
		de/regional-info.xml		\
		mx/regional-info.xml		\
		ec/regional-info.xml		\
		pa/regional-info.xml		\
		uy/regional-info.xml		\
		ni/regional-info.xml		\
		ve/regional-info.xml		\
		pe/regional-info.xml		\
		es/hotspot-list.xml		\
		es/regional-info.xml		\
		uk/regional-info.xml		\
		gt/regional-info.xml		\
		sv/regional-info.xml		\
		co/regional-info.xml		\
		cz/regional-info.xml		\
		cl/regional-info.xml		\
		cr/regional-info.xml		\
		ar/hotspot-list.xml		\
		mx/hotspot-list.xml		\
		ec/hotspot-list.xml		\
		pa/hotspot-list.xml		\
		uy/hotspot-list.xml		\
		ni/hotspot-list.xml		\
		ve/hotspot-list.xml		\
		pe/hotspot-list.xml		\
		uk/hotspot-list.xml		\
		gt/hotspot-list.xml		\
		sv/hotspot-list.xml		\
		co/hotspot-list.xml		\
		cl/hotspot-list.xml		\
		cr/hotspot-list.xml
