hicolormimedir = $(datadir)/icons/hicolor/48x48/mimetypes
gnomemimedir = $(datadir)/icons/gnome/48x48/mimetypes
hicolorappdir = $(datadir)/icons/hicolor/48x48/apps
gnomeappdir = $(datadir)/icons/gnome/48x48/apps

hicolormime_DATA = 	gnome-mime-application-movistar-desktop.png \
	        	gnome-mime-application-x-extension-emsc.png \
        		movistar_icon.png
gnomemime_DATA =	gnome-mime-application-movistar-desktop.png \
                        gnome-mime-application-x-extension-emsc.png \
                        movistar_icon.png

hicolorapp_DATA = movistar_icon.png movistar_icon_notify.png
gnomeapp_DATA = movistar_icon.png movistar_icon_notify.png


EXTRA_DIST=$(hicolormime_DATA) $(gnomemime_DATA) $(hicolorapp_DATA) $(gnomeapp_DATA)
