corelibdir = $(pythondir)/tgcm/core
corelib_PYTHON = __init__.py \
		Actions.py \
		Addressbook.py \
		Advertising.py \
		Autostart.py \
		Bookmarks.py\
		Config.py \
		ConnectionManager.py \
		Connections.py \
		ConnectionLogger.py \
		ConnectionSettingsManager.py \
		Constants.py \
		DBusInterface.py \
		Debug.py \
		Decorators.py \
		Device.py \
		DeviceDecorators.py \
		DeviceDialer.py \
		DeviceExceptions.py \
		DeviceManager.py \
		DocManager.py \
		DownloadHelper.py \
		Exporter.py \
		feedparser.py \
		FreeDesktop.py \
		GSettings.py \
		HotSpotsService.py \
		Importer.py \
		MainModem.py \
		MainWifi.py \
		Messaging.py\
		MobileManagerClient.py \
		NetworkManagerDbus.py \
		NewsService.py \
		Notify.py \
		PPPVariables.py \
		Signals.py \
		Singleton.py \
		SMSStorage.py \
		Theme.py \
		TrafficManager.py \
		TrafficStorage.py \
		TrafficUpdater.py \
		XMLConfig.py \
		XMLTheme.py
