fdonetdir = $(pythondir)/tgcm/contrib/freedesktopnet/
fdonet_PYTHON = __init__.py
fdonet_dbusclientdir = $(pythondir)/tgcm/contrib/freedesktopnet/dbusclient
fdonet_dbusclient_PYTHON = dbusclient/func.py dbusclient/monitor.py dbusclient/__init__.py


fdonet_networkmanagerdir = $(pythondir)/tgcm/contrib/freedesktopnet/networkmanager
fdonet_networkmanager_PYTHON = networkmanager/accesspoint.py networkmanager/device.py networkmanager/util.py networkmanager/monitor.py networkmanager/networkmanager.py networkmanager/__init__.py networkmanager/activeconnection.py


fdonet_networkmanager_utilsdir = $(pythondir)/tgcm/contrib/freedesktopnet/networkmanager/utils
fdonet_networkmanager_utils_PYTHON = networkmanager/utils/__init__.py


fdonet_networkmanager_utils_tooldir = $(pythondir)/tgcm/contrib/freedesktopnet/networkmanager/utils/tool
fdonet_networkmanager_utils_tool_PYTHON = networkmanager/utils/tool/MMHelper.py networkmanager/utils/tool/Command.py networkmanager/utils/tool/CommandDispatcher.py networkmanager/utils/tool/__init__.py


fdonet_networkmanager_utils_tool_commandsdir = $(pythondir)/tgcm/contrib/freedesktopnet/networkmanager/utils/tool/commands
fdonet_networkmanager_utils_tool_commands_PYTHON = networkmanager/utils/tool/commands/Nets.py networkmanager/utils/tool/commands/Devices.py networkmanager/utils/tool/commands/Connections.py networkmanager/utils/tool/commands/__init__.py


fdonet_networkmanager_appletdir = $(pythondir)/tgcm/contrib/freedesktopnet/networkmanager/applet
fdonet_networkmanager_applet_PYTHON = networkmanager/applet/connection.py networkmanager/applet/settings.py networkmanager/applet/pbkdf2.py networkmanager/applet/__init__.py


fdonet_networkmanager_applet_servicedir = $(pythondir)/tgcm/contrib/freedesktopnet/networkmanager/applet/service
fdonet_networkmanager_applet_service_PYTHON = networkmanager/applet/service/connection.py networkmanager/applet/service/__init__.py


fdonet_modemmanagerdir = $(pythondir)/tgcm/contrib/freedesktopnet/modemmanager
fdonet_modemmanager_PYTHON = modemmanager/modemmanager.py modemmanager/__init__.py


fdonet_modemmanager_utilsdir = $(pythondir)/tgcm/contrib/freedesktopnet/modemmanager/utils
fdonet_modemmanager_utils_PYTHON = modemmanager/utils/__init__.py


fdonet_modemmanager_utils_tooldir = $(pythondir)/tgcm/contrib/freedesktopnet/modemmanager/utils/tool
fdonet_modemmanager_utils_tool_PYTHON = modemmanager/utils/tool/MMHelper.py modemmanager/utils/tool/Command.py modemmanager/utils/tool/CommandDispatcher.py modemmanager/utils/tool/__init__.py


fdonet_modemmanager_utils_tool_commandsdir = $(pythondir)/tgcm/contrib/freedesktopnet/modemmanager/utils/tool/commands
fdonet_modemmanager_utils_tool_commands_PYTHON = modemmanager/utils/tool/commands/ListSMS.py modemmanager/utils/tool/commands/SendPuk.py modemmanager/utils/tool/commands/ScanCarriers.py modemmanager/utils/tool/commands/Info.py modemmanager/utils/tool/commands/SendPin.py modemmanager/utils/tool/commands/DeleteSMS.py modemmanager/utils/tool/commands/__init__.py modemmanager/utils/tool/commands/ChangePin.py modemmanager/utils/tool/commands/SendSMS.py


