uilibpydir = $(pythondir)/tgcm/ui/MSD
uilibrcdir = $(datadir)/tgcm/ui/MSD

uilibrc_DATA = MSDAction_frame.ui \
		MSDConnectionsManager_dialog.ui \
		MSDImporter_dialog.ui \
		MSDProgressWindow_dialog.ui \
		MSDSecurityManager_dialog.ui

uilibpy_PYTHON = __init__.py \
		MSDAction.py \
		MSDActionsManager.py \
		MSDConnectionsManager.py \
		MSDImporter.py \
		MSDMessages.py \
		MSDNmPinDialogCloseHelper.py \
		MSDSecurityManager.py \
		MSDProgressWindow.py \
		MSDUtils.py

EXTRA_DIST = $(uilibrc_DATA)
