SUBDIRS = AddressBook \
          CarrierDialog \
          CheckboxDialog \
          ConnectionDialog \
          Dialog \
          Generic \
          HelpDialog \
          NewsServiceDialog \
          PinDialog \
          PukDialog \
          RecargaSaldo \
          Settings \
          Traffic \
          UnlockDeviceDialog

windowsdir = $(pythondir)/tgcm/ui/windows
windows_PYTHON = __init__.py
