SUBDIRS = ConnectionZone \
          DeviceMenuPopup \
          DeviceZone \
          ImageButton \
          LinkButton \
          Menubar \
          ServicesToolbar \
          Systray \
          TrafficZone \
          Window

dockdir = $(pythondir)/tgcm/ui/widgets/dock
dock_PYTHON = __init__.py
