themedwidgetspydir = $(pythondir)/tgcm/ui/widgets/themedwidgets

themedwidgetspy_PYTHON = __init__.py \
			LayoutLoader.py \
			ThemedWidget.py \
			ThemedBackground.py \
			ThemedBackgroundWithAds.py \
			ThemedLabel.py \
			ThemedBitmap.py \
			ThemedProgress.py \
			ThemedAnimate.py \
			ThemedServiceButton.py \
			ThemedButton.py \
			ThemedWidgetEx.py \
			ThemedBanner.py
