addressbookpydir = $(pythondir)/tgcm/ui/windows/AddressBook/
addressbookrcdir = $(datadir)/tgcm/ui/windows/AddressBook/

addressbookrc_DATA = AddressBook_main.ui \
		AddressBook_editor.ui \
		AddressBook_import.ui \
		AddressBook_search_contact.ui

addressbookpy_PYTHON = __init__.py AddressBook.py

EXTRA_DIST=$(addressbookrc_DATA)
