connectiondialogpydir = $(pythondir)/tgcm/ui/windows/ConnectionDialog/
connectiondialogrcdir = $(datadir)/tgcm/ui/windows/ConnectionDialog/

connectiondialogrc_DATA = ConnectionDialog_editor.ui \
		ConnectionDialog_proxy.ui

connectiondialogpy_PYTHON = __init__.py ConnectionDialog.py

EXTRA_DIST=$(connectiondialogrc_DATA)
