pindialogpydir = $(pythondir)/tgcm/ui/windows/PinDialog/
pindialogrcdir = $(datadir)/tgcm/ui/windows/PinDialog/

pindialogrc_DATA = AskPinDialog.ui ChangePinDialog.ui ManagePinDialog.ui

pindialogpy_PYTHON = __init__.py AskPinDialog.py ChangePinDialog.py ManagePinDialog.py

EXTRA_DIST=$(pindialogrc_DATA)
