unlockdevicedialogpydir = $(pythondir)/tgcm/ui/windows/UnlockDeviceDialog/
unlockdevicedialogrcdir = $(datadir)/tgcm/ui/windows/UnlockDeviceDialog/

unlockdevicedialogrc_DATA = UnlockDeviceDialog.ui

unlockdevicedialogpy_PYTHON = __init__.py UnlockDeviceDialog.py

EXTRA_DIST = $(unlockdevicedialogrc_DATA)
