trafficzonedir = $(datadir)/tgcm/icons/theme/default/dock/TrafficZone

trafficzone_DATA = \
		   loads_0.png \
		   loads_1.png \
		   loads_2.png \
		   loads_3.png \
		   loads_4.png \
           loads_5.png \
           loads_6.png \
           loads_7.png \
           loads_8.png \
           loads_9.png \
           loads_10.png


EXTRA_DIST=$(trafficzone_DATA)
