SUBDIRS = mmdbus sms devices 
NULL =

mobilemanagerdir     =  $(MOBILEMANAGER_DIR)

mobilemanager_PYTHON =	__init__.py			\
			ModemManager.py			\
			DeviceManager.py		\
			DeviceTable.py	 		\
			DevicePort.py	 		\
			DeviceLogger.py 		\
			Singleton.py	 		\
			Mixin.py  			\
			Logging.py			\
			$(NULL)
