devicemenupopuppydir = $(pythondir)/tgcm/ui/widgets/dock/DeviceMenuPopup
devicemenupopuprcdir = $(datadir)/tgcm/ui/widgets/dock/DeviceMenuPopup

devicemenupopuprc_DATA = DeviceMenuPopup.ui

devicemenupopuppy_PYTHON = __init__.py \
                      DeviceMenuPopup.py

EXTRA_DIST=$(devicemenupopuprc_DATA)
