systraypydir = $(pythondir)/tgcm/ui/widgets/dock/Systray
systrayrcdir = $(datadir)/tgcm/ui/widgets/dock/Systray

systrayrc_DATA = Systray.ui

systraypy_PYTHON = __init__.py \
                   Systray.py \
                   SystrayTrayicon.py \
                   SystrayIndicator.py

EXTRA_DIST=$(systrayrc_DATA)
