settingsgeneralpydir = $(pythondir)/tgcm/ui/widgets/settings/General
settingsgeneralrcdir = $(datadir)/tgcm/ui/widgets/settings/General

settingsgeneralrc_DATA = General.ui MyDetailsCommon.ui MyDetailsUK.ui

settingsgeneralpy_PYTHON = __init__.py General.py MyDetailsCommon.py MyDetailsUK.py

EXTRA_DIST=$(settingsgeneralrc_DATA)
