SUBDIRS = alcatel huawei novatel sierra zte option

devicesdir = $(pythondir)/mobilemanager/devices
devices_PYTHON = 	DeviceIO.py		\
			DeviceProperties.py	\
			__init__.py		\
			ModemGsmCard.py		\
			ModemGsmCheckers.py	\
			ModemGsmExceptions.py	\
			ModemGsmNetwork.py	\
			ModemGsm.py		\
			ModemGsmSMS.py		\
			ModemGsmUssd.py		\
			ModemGsmContacts.py	\
			ModemLocation.py	\
			Modem.py		\
			ModemSimple.py		\
			ModemStateMachine.py	\
			SerialPort.py

